# sepviz

./: .gitignore  .gitmodules  LICENSE  Makefile  Readme.md  flake.nix  package-lock.json  package.json  vite-plugin-peggy.ts  vite.config.ts
alectryon-viz/: Readme.md  package.json  vite.config.ts
alectryon-viz/public/: CFML-Queue.html  CFML-Test.html  CFML-Tree.html  Iris-List.html  Iris-Queue.html  SoftwareFoundations-SLF-Repr.html  SoftwareFoundations-VC-Append1.html  renderConfig.yaml  test-animation.html  test-parsing.html
alectryon-viz/scripts/: gen_proofs.sh  inject.sh
alectryon-viz/src/: alectryon-viz.ts
arthur/: LiterateQueue.v  Makefile  parser.js  sep.css  sep.g  sep.js
arthur/_build/: LiterateQueue-plain.html  LiterateQueue.html  alectryon.css  docutils_basic.css  sep.js
assets/: alectryon-header.v  config_constr.json  newsep.js  sep.css  sep.g  sep.js
example-proofs/: Makefile
examples/: .gitignore  Makefile  README.md  concat.py
examples/cfml/: ListNull.v  LiterateList.v  LiterateQueue.v  LiterateTree.v  Makefile  _CoqProject  (+1 more)
interop/sepviz-cfml/: Makefile  README.md  _CoqProject  sepviz-cfml.opam
interop/sepviz-cfml/theories/: CFMLNotations.v  WPUntyped.v
interop/sepviz-iris/: Makefile  README.md  _CoqProject  sepviz-iris.opam
interop/sepviz-iris/theories/: IrisNotations.v
interop/sepviz-slf/: Makefile  README.md  _CoqProject  sepviz-slf.opam
interop/sepviz-slf/theories/: SLFNotations.v
public/: CFML-Queue.html  CFML-Test.html  CFML-Tree.html  Iris-List.html  Iris-Queue.html  SoftwareFoundations-SLF-Repr.html  renderConfig.yaml  test-parsing.html
scripts/: gen_proofs.sh  gen_proofs_cfml.sh  gen_proofs_example.sh  gen_proofs_iris.sh  gen_proofs_slf.sh  gen_proofs_vc.sh
sep-viz/: Readme.md  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
sepviz/: Makefile  Readme.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
sepviz-alectryon/: Readme.md  package.json  vite.config.ts
sepviz-vsrocq/: Makefile  README.md
src/: alectryon-viz.ts  config.ts  dot-builder.ts  parser.ts  render.ts  sep-grammar.g  sep-grammar.types.ts  sort.ts  viz.ts
tests/: config.test.ts  dot-builder.test.ts  parser.test.ts  sep-parser.test.ts
theories/: Makefile
(+71 files in other folders)
